=== SVN

* Changed mysql adapter to support encoding option as well.

* Added charset/encoding option to postgres adapter.

* Implemented Model.serialize (thanks Aman Gupta.)

* Changed Model.create to INSERT DEFAULT VALUES instead of (id) VALUES (null) (brings back #41.)

* Fixed Model.new to work without arguments.

* Added Model.no_primary_key method to allow models without primary keys.

* Added Model#this method (#42 thanks Duane Johnson).

* Fixed Dataset#insert_sql to use DEFAULT VALUES clause if argument is an empty hash.

* Fixed Model.create to work correctly when no argument is passed (#41).

=== 0.2.0.2 (2007-09-07)

* Dataset#insert can now accept subqueries.

* Changed Migrator.apply to return the version.

* Changed Sequel::Model() to cache intermediate classes so descendant classes can be reopened (#39).

* Added :charset option to MySQL adapter (#40).

* Fixed Dataset#exclude to add parens around NOT expression (#38).

* Fixed use of sub-queries with all comparison operators in block filters (#38).

* Fixed arithmetic expressions in block filters to not be literalized.

* Changed Symbol#method_missing to return LiteralString.

* Changed PrettyTable to right-align numbers.

* Fixed Model.create_table (thanks Duane Johnson.)

=== 0.2.0.1 (2007-09-04)

* Improved support for invoking methods with inline procs inside block filters.

=== 0.2.0 (2007-09-02)

* Fixed Model.drop_table (thanks Duane Johnson.)

* Dataset#each can now return rows for arbitrary SQL by specifying :sql option.

* Added spec for postgres adapter.

* Fixed Model.method_missing to work with new SQL generation.

* Fixed #compare_expr to support regexps.

* Fixed postgres, mysql adapters to support regexps.

* More specs for block filters. Updated README.

* Added support for globals and $X macros in block filters.

* Fixed Sequelizer to not fail if ParseTree or Ruby2Ruby gems are missing.

* Renamed String#expr into String#lit (#expr should be deprecated in future versions).
