@@ -1,5 +1,7 @@
 === SVN
 
+* Added support for case-sensitive regexps to mysql adapter.
+
 * Changed mysql adapter to support encoding option as well.
 
 * Added charset/encoding option to postgres adapter.
